--- a/art.html
+++ b/art.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Terrence Shi</title>
     <style>
         @font-face {
