--- a/bio.html
+++ b/bio.html
@@ -17,12 +17,12 @@
 
         }
         h1{
-            font-family: steelfish;;
+            font-family: "steelfish";
             font-size: 100px;
 
         }
         h2{
-            font-family: Franklin Gothic Medium;
+            font-family: "Franklin Gothic Medium";
             font-size: 4.25vh;
             font-weight: normal;
 
