--- a/bio.html
+++ b/bio.html
@@ -28,7 +28,7 @@
 
         }
         h3{
-            font-family: Aileron;
+            font-family: "Aileron";
             font-size: 14px;
             color: #696969;
             font-weight: normal;
