--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
     <title>Terrence Shi</title>
     <style>
         h2{
-            font-family: "Franklin Gothic Medium";
+            font-family: 'Roboto', sans-serif;
             font-size: 4.25vh;
             font-weight: normal;
 
