--- a/bio.html
+++ b/bio.html
@@ -81,7 +81,8 @@
             text-align: center;
             margin-left: 7.5%;
             margin-right: 7.5%;
-            padding-bottom: 45%;
+            padding-bottom: 7.5%; 
+            display: inline-block;
         }
         
         a.gray{
