--- a/bio.html
+++ b/bio.html
@@ -124,6 +124,20 @@
             padding: 0px;
             overflow-x: hidden; 
         }
+        @media only screen and (max-width: 820px) {
+            .bars{          
+                column-count: 1;
+
+            }
+            .title{
+                line-height: 450%;
+                margin-bottom: 15%;
+            }
+            h2{
+                line-height: 200%;
+                font-size: 14px;
+            }
+        }
 
 
     </style>
