--- a/bio.html
+++ b/bio.html
@@ -152,7 +152,7 @@
 
     <div class="section">
         <div class = "bio">
-        <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hey, I'm Terrence. I am a Computional Media major at Georgia Tech.
+        <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hey, I'm Terrence. I am a Computational Media major at Georgia Tech.
             Computational Media is an interdisciplinary major that blends computer science with visual design.<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This major, as well as my interests in computer science, painting, music,
             cinema, and design makes me well equipped for any career that falls between computing and the arts.</h2>
