--- a/bio.html
+++ b/bio.html
@@ -10,8 +10,9 @@
     <style>
         h2{
             font-family: 'Roboto', sans-serif;
-            font-size: 4.25vh;
+            font-size: 4vh;
             font-weight: normal;
+            line-height: 1.8;
 
         }
         h3{
@@ -53,7 +54,6 @@
         {
           position: relative;
           text-align: left;
-          line-height: 50px;
           width: 50%;
           margin-left: 5%;
           padding-bottom: 7.5%;
