--- a/bio.html
+++ b/bio.html
@@ -160,7 +160,7 @@
         </div>
 
         <div class="pfp">
-                <img src="assets/pfpTN.png" alt="Me" class="image">
+                <img src="assets/pfp2tn.png" alt="Me" class="image">
 
         </div>
         
